# ml_ops_detect_ai_generated_text

./: .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  flake8.yml  pytests.yml  tests.yml
app/: app_predict.py  cloud_fucntions.py  cloud_functions.py  main.py  requirements.txt  streamlitapp.py  test_story.txt
configs/: config.yaml
configs/data/: data_conf.yaml
configs/experiment/: exp1.yaml
configs/model/: model_conf.yaml
configs/sweep/: lr_sweep.yaml
configs/training/: training_conf.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
ml_ops_detect_ai_generated_text/: predict_model.py  train_model.py  train_model1.py  utilities.py
ml_ops_detect_ai_generated_text/data/: dataloaders.py  make_dataset.py
ml_ops_detect_ai_generated_text/models/: model.py
reports/: README.md
tests/: data_test.py  model_test.py
